# PortfolioEmergent

./: .replit  backend_test.py  contracts.md  pyproject.toml  replit.md  test_result.md
backend/: .env  requirements.txt  server.py  start.sh
deploy/: DEPLOYMENT.md  Dockerfile  deploy.sh  docker-compose.yml  ecosystem.config.cjs  ecosystem.config.js  nginx-initial.conf  nginx.conf
frontend/: .env  craco.config.js  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: About.jsx  Contact.jsx  Footer.jsx  GlitchText.jsx  Header.jsx  Hero.jsx  MobileOrbFallback.jsx  Projects.jsx  Scanlines.jsx  Skills.jsx
frontend/src/data/: mock.js
